2018-04-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-cache-available-p, w3m-w3m-retrieve-1): Revert.
	See [emacs-w3m:12951].

2018-04-03  Boruch Baum  <boruch_baum@gmx.com>

	Send a cached ETag to the remote server so as to check whether
	the server responds with 304 meaning the cache is still up-to-date.
	[emacs-w3m:12947]

	* w3m.el (w3m-cache-available-p): Fetch Etag.
	(w3m-w3m-retrieve-1): Send it to the server.

2018-03-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-perldoc.el (w3m-about-perldoc): Expand "~" before setting
	`default-directory' to avoid an error calling a process.

2018-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	[emacs-w3m:12929]
	* w3m.el (w3m-previous-session-buffer):
	New variable, a successor to w3m-parent-session-buffer.
	(w3m-next-buffer): Set it.
	(w3m-delete-buffer): Return to it after deletion.

	* w3m-util.el (w3m-generate-new-buffer): Set it.

	* w3m-ems.el (w3m-tab-drag-mouse-function)
	(w3m-tab-click-mouse-function): Set it.

2018-02-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	[emacs-w3m:12928]
	* w3m.el (w3m-parent-session-buffer): Remove it (temporarily).

	* w3m-util.el (w3m-generate-new-buffer): Run w3m-mode here.

2018-02-26  Vladimir Sedach  <vas@oneofus.la>

	[emacs-w3m:12892]
	* w3m.el (w3m-view-this-url-1): Fix LAST parameter to w3m-copy-buffer
	to make new buffer go after the current buffer, as intended in revision
	1.1691 on 2017-10-13.

	* w3m-util.el (w3m-generate-new-buffer): Fix bug introduced in revision
	1.3628 on 2017-10-13 where new buffers were always assigned number 1.

2018-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-ems.el (w3m-toolbar-define-keys): Don't show button names in
	tool-bar in order to prevent the rightmost buttons from being pushed
	out.  Instead, hover the mouse on a button and see the help-echo.

2018-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-generate-new-buffer): Work for w3m-fb-mode correctly
	([emacs-w3m:12904]).
