@@ -1,3 +1,7 @@
+2018-05-02  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-favicon.el (w3m-favicon-retrieve): Gunzip data if necessary.
+
 2018-04-05  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-cache-available-p, w3m-w3m-retrieve-1): Revert.
